fix: issue with charts visualization on firefox

--- a/src/dashboard.style.scss
+++ b/src/dashboard.style.scss
@@ -268,7 +268,6 @@ main {
 	}
 	.issue-types .card-block {
 		max-width: 100%;
-		margin: auto;
 	}
 	.issue-types .chart-label {
 		margin: -1em 0 0;
